--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>blueasy</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="../css/style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
 		<div class="container-fluid ble">
@@ -27,60 +27,64 @@
 				<span class="punchline">I AM LOOKING FOR THE THINGS I HAVE NEVER SEEN BEFORE"</span>
 			</div>
 		</div>
+
 		<div class="container-service">
 			<div class="serviceText">
 				<h2><span class="souligne">SER</span>VICE</h2>
 			</div>
-				<div class="Cards">
-					<div class="row">
+				<div class="cards">
+					<div class="coffee">
+						<img class="" src="./images/coffee.png" alt="coffee-logo">
+						<h2 class="frameTitle">COFFEE</h2>
+						<p>Apple pie icing sweet. Brownie
+							Jelly-o applicate sweet roll
+							liquorice bear claw. Jujubes
+							carrot cake cotton candy sweet
+							tart brownie. Tiramisu applicake
+							jujubes.</p>
+					</div>
 
-						<div class="col-sm">
-							<div class="card bg-transparent border-0 style="width: 18rem;">
-								<img src="../images/coffee.png" class="card-img-top" alt="...">
-								<div class="card-body">
-								  <h5 class="card-title">Card title</h5>
-								  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								  <a href="#" class="btn btn-primary">Go somewhere</a>
-								</div>
-							  </div>
-						</div>
+					<div class="instant">
+						<img class="" src="./images/instant.png" alt="coffee-logo">
+						<h2 class="frameTitle">INSTANT</h2>
+						<p>Apple pie icing sweet. Brownie
+							Jelly-o applicate sweet roll
+							liquorice bear claw. Jujubes
+							carrot cake cotton candy sweet
+							tart brownie. Tiramisu applicake
+							jujubes.</p>
+					</div>
 
-						<div class="col-sm">
-							<div class="card" style="width: 18rem;">
-								<img src="..." class="card-img-top" alt="...">
-								<div class="card-body">
-								  <h5 class="card-title">Card title</h5>
-								  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								  <a href="#" class="btn btn-primary">Go somewhere</a>
-								</div>
-							  </div>
-						</div>
-
-						<div class="col-sm">
-							<div class="card" style="width: 18rem;">
-								<img src="..." class="card-img-top" alt="...">
-								<div class="card-body">
-								  <h5 class="card-title">Card title</h5>
-								  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								  <a href="#" class="btn btn-primary">Go somewhere</a>
-								</div>
-							  </div>
-						</div>
-						
-						<div class="col-sm">
-							<div class="card" style="width: 18rem;">
-								<img src="..." class="card-img-top" alt="...">
-								<div class="card-body">
-								  <h5 class="card-title">Card title</h5>
-								  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-								  <a href="#" class="btn btn-primary">Go somewhere</a>
-								</div>
-							  </div>
-						</div>
+					<div class="serious">
+						<img class="" src="./images/dslr.png" alt="coffee-logo">
+						<h2 class="frameTitle">SERIOUS</h2>
+						<p>Apple pie icing sweet. Brownie
+							Jelly-o applicate sweet roll
+							liquorice bear claw. Jujubes
+							carrot cake cotton candy sweet
+							tart brownie. Tiramisu applicake
+							jujubes.</p>
+					</div>
+					
+					<div class="frame">
+						<img class="" src="./images/dslr.png" alt="coffee-logo">
+						<h2 class="frameTitle">FRAME</h2>
+						<p>Apple pie icing sweet. Brownie
+							Jelly-o applicate sweet roll
+							liquorice bear claw. Jujubes
+							carrot cake cotton candy sweet
+							tart brownie. Tiramisu applicake
+							jujubes.</p>
+					</div>
 
 				</div>
 			</div>
-		</div>			
+		</div>	
+		
+		<div class="container-portfolio">
+
+		</div>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 	</body>
 </html>
